John Karr is now a perl author

--- a/AUTHORS
+++ b/AUTHORS
@@ -652,6 +652,7 @@ John Hawkinson                 <jhawk@mit.edu>
 John Heidemann                 <johnh@isi.edu>
 John Holdsworth                <coldwave@bigfoot.com>
 John Hughes                    <john@AtlanTech.COM>
+John Karr                      <brainbuz@brainbuz.org>
 John Kristian                  <jmk2001@engineer.com>
 John L. Allen                  <allen@grumman.com>
 John Lightsey                  <jd@cpanel.net>
