--- a/pod/perlfunc.pod
+++ b/pod/perlfunc.pod
@@ -4432,7 +4432,7 @@ X<oct> X<octal> X<hex> X<hexadecimal> X<binary> X<bin>
 =for Pod::Functions convert a string to an octal number
 
 Interprets EXPR as an octal string and returns the corresponding
-value.  An octal string consists of octal digits and, as of Perl 5.XXX,
+value.  An octal string consists of octal digits and, as of Perl 5.33.5,
 an optional C<0o> or C<o> prefix.  Each octal digit may be preceded by
 a single underscore, which will be ignored.
 (If EXPR happens to start off with C<0x> or C<x>, interprets it as a
