Add Jae Bradley as an Author

--- a/AUTHORS
+++ b/AUTHORS
@@ -557,6 +557,7 @@ Jacques Germishuys             <jacquesg@striata.com>
 Jacqui Caren                   <Jacqui.Caren@ig.co.uk>
 Jake Hamby                     <jehamby@lightside.com>
 Jakub Wilk                     <jwilk@jwilk.net>
+Jae Bradley                    <jae.b.bradley@gmail.com>
 James                          <james@rf.net>
 James A. Duncan                <jduncan@fotango.com>
 James Clarke                   <jrtc27@jrtc27.com>
