--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -364,6 +364,10 @@ the raw reports.
 Similarly, monitor the smoking of perl for compiler warnings, and try to
 fix.
 
+Additionally both L<Travis CI|https://travis-ci.org/Perl/perl5> and
+L<GitHub Actions|https://github.com/Perl/perl5/actions> smokers run
+automatically.
+
 =for checklist skip BLEAD-POINT
 
 =head3 monitor CPAN testers for failures
@@ -377,14 +381,6 @@ That page accepts a query parameter, C<pair> that takes a pair of
 colon-delimited versions to use for comparison.  For example:
 
 L<http://analysis.cpantesters.org/beforemaintrelease?pair=5.20.2:5.22.0%20RC1>
-
-=head3 Monitor Continuous Integration smokers
-
-Currently both "Travis CI" and "GitHub Actions" smokers are setup.
-Their current status is available at:
-
-L<https://github.com/Perl/perl5/actions>
-L<https://travis-ci.org/Perl/perl5>
 
 =head3 update perldelta
 
