--- a/AUTHORS
+++ b/AUTHORS
@@ -1157,6 +1157,7 @@ Sebastien Barre                <Sebastien.Barre@utc.fr>
 Sergey Alekseev                <varnie29a@mail.ru>
 Sergey Aleynikov               <sergey.aleynikov@gmail.com>
 Sergiy Borodych                <bor@cpan.org>
+Sevan Janiyan                  @sevan
 Shawn                          <svicalifornia@gmail.com>
 Shawn M Moore                  <sartak@gmail.com>
 Sherm Pendley                  <sherm@dot-app.org>
