Add Sevan Janiyan as author
(cherry picked from commit affe02a96fc1fc4aa88073a4a9aedf6a1488e829)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1146,6 +1146,7 @@ Sebastien Barre                <Sebastien.Barre@utc.fr>
 Sergey Alekseev                <varnie29a@mail.ru>
 Sergey Aleynikov               <sergey.aleynikov@gmail.com>
 Sergiy Borodych                <bor@cpan.org>
+Sevan Janiyan                  @sevan
 Shawn                          <svicalifornia@gmail.com>
 Shawn M Moore                  <sartak@gmail.com>
 Sherm Pendley                  <sherm@dot-app.org>
