fixup! Add Sevan Janiyan as author
(cherry picked from commit 6eef26b1c82a35912e0b0e884a71a645d4e7cf20)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1146,7 +1146,7 @@ Sebastien Barre                <Sebastien.Barre@utc.fr>
 Sergey Alekseev                <varnie29a@mail.ru>
 Sergey Aleynikov               <sergey.aleynikov@gmail.com>
 Sergiy Borodych                <bor@cpan.org>
-Sevan Janiyan                  @sevan
+Sevan Janiyan                  <venture37@geeklan.co.uk>
 Shawn                          <svicalifornia@gmail.com>
 Shawn M Moore                  <sartak@gmail.com>
 Sherm Pendley                  <sherm@dot-app.org>
