--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -338,9 +338,42 @@ L</Modules and Pragmata> section.
 
 =over 4
 
-=item XXX-some-platform
+=item Windows
 
-XXX
+Windows now supports L<symlink()|perlfunc/symlink> and
+L<readlink()|perlfunc/readlink>, and L<lstat()|perlfunc/lstat> is no
+longer an alias for L<stat()|perlfunc/stat>.
+L<[#18005]|https://github.com/Perl/perl5/issues/18005>.
+
+Unlike POSIX systems, creating a symbolic link on Windows requires
+either elevated privileges or Windows 10 1703 or later with Developer
+Mode enabled.
+
+stat(), including C<stat FILEHANDLE>, and lstat() now uses our own
+implementation that populates the device C<dev> and inode numbers
+C<ino> returned rather than always returning zero.  The number of
+links C<nlink> field is now always populated.
+
+L<< C<${^WIN32_SLOPPY_STAT}> |perlvar/${^WIN32_SLOPPY_STAT} >> previously
+controlled whether the C<nlink> field was populated requiring a
+separate Windows API call to fetch, since nlink and the other
+information required for stat() is now retrieved in a single API call.
+
+The C<-r> and C<-w> operators now return true for the C<STDIN>,
+C<STDOUT> and C<STDERR> handles.  Unfortunately it still won't return
+true for duplicates of those handles.
+L<[#8502]|https://github.com/Perl/perl5/issues/8502>.
+
+The times returned by stat() and lstat() are no longer incorrect
+across Daylight Savings Time adjustments.
+L<[#6080]|https://github.com/Perl/perl5/issues/6080>.
+
+C<-x> on a filehandle should now match C<-x> on the corresponding
+filename on Vista or later.
+L<[#4145]|https://github.com/Perl/perl5/issues/4145>.
+
+C<-e '"'> no longer incorrectly returns true.
+L<[#12431]|https://github.com/Perl/perl5/issues/12431>.
 
 =back
 
