jkahrman is now a perl author

--- a/AUTHORS
+++ b/AUTHORS
@@ -624,6 +624,7 @@ Jim Miner                      <jfm@winternet.com>
 Jim Richardson
 Jim Schneider                  <james.schneider@db.com>
 Jirka Hruška                   <jirka@fud.cz>
+jkahrman                       <jkahrman@users.noreply.github.com>
 Joachim Huober
 Joaquin Ferrero                <explorer@joaquinferrero.com>
 Jochen Wiedmann                <joe@ispsoft.de>
