Applying a forgotten internal hyperlink.

--- a/Porting/perldocstyle.pod
+++ b/Porting/perldocstyle.pod
@@ -536,8 +536,9 @@ explanatory text and code examples.
 =back
 
 Complex functions that need their text divided into subsections (under
-the principles of ["Apply section-breaks and examples generously"]) may
-do so by using sublists, with C<=item> elements as header text.
+the principles of L<"Apply section-breaks and examples
+generously"|/Apply section-breaks and examples generously>) may do so by
+using sublists, with C<=item> elements as header text.
 
 A fictional function "C<myfunc>", which takes a list as an optional
 argument, might have an entry in perlfunc shaped like this:
