--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -700,6 +700,7 @@ the strings?).
  Sawyer X  5.33.2       2020-Sep-20
  Steve     5.33.3       2020-Oct-20
  Tom H     5.33.4       2020-Nov-20
+ Max M     5.33.5       2020-Dec-20
 
 =head2 SELECTED RELEASE SIZES
 
