--- a/Porting/epigraphs.pod
+++ b/Porting/epigraphs.pod
@@ -17,6 +17,13 @@ Consult your favorite dictionary for details.
 
 =head1 EPIGRAPHS
 
+=head2 v5.33.5 - Max Weber, (from "Understanding Administration", by Wolfgang Seibel)
+
+L<Announced on 2020-12-20 by Max Maischein|https://www.nntp.perl.org/group/perl.perl5.porters/2020/12/msg258683.html>
+
+Authority is primarily: Administration
+    -- Max Weber
+
 =head2 v5.33.4 - George Eliot, "Adam Bede"
 
 L<Announced on 2020-11-20 by Tom Hukins|https://www.nntp.perl.org/group/perl.perl5.porters/2020/11/msg258597.html>
