--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -44,7 +44,7 @@ you should reset the version numbers to the next blead series.
   2020-09-20  5.33.2 ✓       Sawyer X
   2020-10-20  5.33.3 ✓       Steve Hay
   2020-11-20  5.33.4 ✓       Tom Hukins
-  2020-12-20  5.33.5         Max Maischein
+  2020-12-20  5.33.5 ✓       Max Maischein
   2021-01-20  5.33.6         Richard Leach
   2021-02-20  5.33.7         Renee Backer
   2021-03-20  5.33.8         Atoomic
