Adjust AUTHORS file with new authors
(manually cherry picked from commit 1211db3d963005502d6fd60c503cb0003706a3c3)

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Achim Bohnet                   <ach@mpe.mpg.de>
 Achim Gratz                    <achim.gratz@stromeko.de>
 Adam Flott                     <adam@npjh.com>
 Adam Hartley                   <git@ahartley.com>
+Adam Hartley                   @BytesGuy
 Adam Kennedy                   <adam@ali.as>
 Adam Krolnik                   <adamk@gypsy.cyrix.com>
 Adam Milner                    <carmiac@nmt.edu>
